--- a/app/src/main/res/layout/fragment_partes_item.xml
+++ b/app/src/main/res/layout/fragment_partes_item.xml
@@ -52,7 +52,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lbl_placa_item_parte" />
 
-
+            <TextView
+                android:id="@+id/estadoParte"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@color/rojo"
+                android:text="No Aceptado"
+                android:gravity="center"
+                android:textColor="#fff"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
