--- a/app/src/main/res/layout/fragment_notificaciones.xml
+++ b/app/src/main/res/layout/fragment_notificaciones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.consorciosm.sanmiguel.ui.main.supervisor.notificaciones.NotificacionesFragment">
+    tools:context="com.consorciosm.sanmiguel.ui.main.admin.ui.ordenes.NotificacionesFragment">
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -22,10 +22,11 @@
         app:layout_constraintGuide_begin="20dp" />
 
     <TextView
-        android:id="@+id/TextView541"
+        android:id="@+id/OrdenesProgramadas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Salidas Pendientes de Validación"
+        android:layout_marginTop="16dp"
+        android:text="Ordenes Programadas:"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
         app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
@@ -33,33 +34,52 @@
         android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Fecha:"
-        app:layout_constraintBottom_toBottomOf="@+id/et_fecha_fop"
-        app:layout_constraintStart_toStartOf="@+id/guideline9"
-        app:layout_constraintTop_toBottomOf="@+id/TextView541" />
+        android:layout_marginStart="32dp"
+        android:text="Pagina Actual:"
+        app:layout_constraintBottom_toTopOf="@+id/rv_fragment_ordenes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OrdenesProgramadas" />
 
     <EditText
-        android:id="@+id/et_fecha_fop"
+        android:id="@+id/searchFecha"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="Pagina 1"
+        android:inputType="date"
+        app:layout_constraintEnd_toStartOf="@+id/Search"
+        app:layout_constraintStart_toEndOf="@+id/textView29"
+        app:layout_constraintTop_toBottomOf="@+id/OrdenesProgramadas" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fn_add_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:ems="10"
-        android:inputType="date"
-        app:layout_constraintStart_toEndOf="@+id/textView29"
-        app:layout_constraintTop_toBottomOf="@+id/TextView541" />
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:visibility="visible"
+        android:src="@android:drawable/ic_input_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_fragment_ordenes_programadas"
+        android:id="@+id/rv_fragment_ordenes"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha_fop"
+        app:layout_constraintTop_toBottomOf="@id/searchFecha"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
     <RelativeLayout
-        android:id="@+id/rl_frag_partes"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha_fop"
+        android:id="@+id/progressBar"
+        app:layout_constraintTop_toBottomOf="@id/searchFecha"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content">
@@ -77,4 +97,26 @@
             android:layout_height="wrap_content"/>
 
     </RelativeLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/Search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/border_label"
+        android:paddingHorizontal="10dp"
+        android:drawableStart="@drawable/ic_search"
+        android:text="Siguiente"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OrdenesProgramadas" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
