--- a/app/src/main/res/layout/fragment_notificaciones_detail.xml
+++ b/app/src/main/res/layout/fragment_notificaciones_detail.xml
@@ -173,7 +173,7 @@
 
     <TextView
         android:layout_marginHorizontal="20dp"
-        android:id="@+id/textView18"
+        android:id="@+id/lbl_order_proyecto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -191,7 +191,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toStartOf="@+id/guideline15"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
-        app:layout_constraintTop_toBottomOf="@+id/textView18">
+        app:layout_constraintTop_toBottomOf="@+id/lbl_order_proyecto">
 
 
         <LinearLayout
