--- a/app/src/main/res/layout/fragment_monitoreo_preview.xml
+++ b/app/src/main/res/layout/fragment_monitoreo_preview.xml
@@ -160,7 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Fecha Final"
+                android:text="Horas de busqueda"
                 app:layout_constraintStart_toStartOf="@+id/guideline11"
                 app:layout_constraintTop_toBottomOf="@+id/fecha" />
             <EditText
@@ -171,11 +171,10 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/border_label"
                 android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:hint="Busqueda"
-                android:inputType="textPersonName"
+                android:hint="8 Horas "
+                android:inputType="number"
                 android:padding="6dp"
+                android:text="8"
                 app:layout_constraintEnd_toStartOf="@+id/searchFecha"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline11"
